# DEUtilsAzure

./: INSTALL.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
de_utils/: __init__.py  alerts.py  checkpoint.py  cli.py  databricks.py  expectations.py  history.py  loader.py  metastore.py  pipeline.py  profiler.py  quality.py  retry.py  schema.py  secrets.py  utils.py
de_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: databricks_quickstart.py
tests/: conftest.py  test_alerts.py  test_audit.py  test_checkpoint.py  test_config.py  test_config_loader.py  test_databricks.py  test_delta.py  test_expectations.py  test_history.py  test_lineage.py  test_loader.py  test_medallion.py  test_metastore.py  test_profiler.py  test_quality.py  test_retry.py  test_scd.py  test_schema.py  test_secrets_and_pipeline.py  test_storage.py  test_table_ops.py  test_utils.py
